fix some bugs on Safari

--- a/src/views/Home/scss/playList.scss
+++ b/src/views/Home/scss/playList.scss
@@ -77,7 +77,7 @@
     width: 160px;
     height: 160px;
     position: relative;
-    perspective: 300px;
+    perspective: 1800px;
 
     img, canvas {
       display: block;
