--- a/src/views/Profile/scss/terminal.scss
+++ b/src/views/Profile/scss/terminal.scss
@@ -52,7 +52,7 @@
     .content {
       height: 360px;
       color: #53AE58;
-      font-family: "Source Code Pro";
+      font-family: "Monaco", "Consolas", "Source Code Pro";
       position: relative;
   
       i.cursor {
